{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Player",
            "id": "01d393be-222a-4315-8002-0626316d8e6c",
            "actions": [
                {
                    "name": "UiLButton",
                    "type": "Button",
                    "id": "84fb2a59-63f1-4d90-9238-6521b6d5940b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "6aee13b9-f1af-45b8-886d-d83ea0354b5c",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "UiLButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6f2f7ced-c3b6-47e9-af5d-708ef13b078e",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "UiLButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}